syntax = "proto3";
package chain4energy.c4echain.cfevesting;

option go_package = "github.com/chain4energy/c4echain/x/cfevesting/types";

message VestingAccount {
  uint64 id = 1;
  string address = 2;
}
